--- a/src/components/DropdownMenu.module.scss
+++ b/src/components/DropdownMenu.module.scss
@@ -7,10 +7,7 @@
 
 .submenu {
   position: absolute;
-  left: 100%;
-  top: 0;
-  min-width: 150px;
-  border-left: 1px solid var(--theme-border-subtle);
+  inset: 0;
   background: var(--theme-background);
   box-shadow: var(--theme-shadow-small);
 }
